<resources>
    <string name="app_name">Examac</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">confirm Password</string>
    <string name="signup">Signup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Exam">Exam</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_settings_student">Settings</string>
    <string name="Home">Home</string>
    <string name="examac">Examac</string>
    <string name="grading_short_answer_questions">Grading Short Answer Questions</string>
    <string name="using_deep_learning_and_nlp">Using Deep Learning And Nlp</string>
    <string name="regester">regester</string>
    <string name="log_in">log in</string>
    <string name="welcome_to_examac">Welcome to Examac!</string>
    <string name="are_you_have_account">are you have account?</string>
    <string name="welcome_back_to_examac">Welcome Back to Examac!</string>
    <string name="login_to_enter_your_account">Login To Enter Your Account</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_account">don\'t have account?</string>
    <string name="forget_password">forget password?</string>
    <string name="questions">Questions</string>
    <string name="answers">Answers</string>
    <string name="add_questions">add question</string>
    <string name="old_exams">Old Exams</string>
    <string name="find_your_exam">Find Your Exam</string>
    <string name="enter_exam_id">enter exam id</string>
    <string name="enter_exam_date">enter exam Date</string>
    <string name="access">Access</string>
    <string name="upload_your_exam">Upload Your Exam</string>
    <string name="exam_name">exam name</string>
    <string name="create">Create</string>
    <string name="upload">upload</string>
    <string name="show_exam">Show Exam</string>
    <string name="choose_exam">choose exam</string>
    <string name="your_exam">your exam</string>
    <string name="save">save</string>
    <string name="upload_exam">Upload Exam</string>
    <string name="create_exam">Create Exam</string>
    <string name="find_exam">Find Exam</string>
    <string name="student">Student</string>
    <string name="backbtnpress">press back again to exit</string>
    <string name="teacher">Teacher</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="faildtoload"> Failed to load deprecated vision dynamite module </string>
    <string name="save_questions">save questions</string>
    <string name="update">Update</string>
    <string name="update_your_exam">update your exam</string>
    <string name="save_answers">save answers</string>
</resources>