<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splashactivity"
    android:background="@drawable/splachde"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examac"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grading_short_answer_questions"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/using_deep_learning_and_nlp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/btnsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_splashde"
        app:backgroundTint="@color/purple_500"
        android:text="@string/regester"
        android:layout_marginTop="300dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btnlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_splashde"
        app:backgroundTint="@color/purple_500"
        android:text="@string/log_in"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"/>
    </LinearLayout>

</FrameLayout>