<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginfragment"
    android:background="@color/purple_500"
    tools:context=".FragmentC">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_to_examac"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_enter_your_account"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="15sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signde"
        android:layout_marginTop="200dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/white"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/studentfragmentsignuppassdontidentecal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redcolor"
                    android:textSize="15sp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxEms="1"
                    app:boxStrokeColor="@color/purple_500"
                    app:hintTextColor="@color/purple_500"
                    app:startIconTint="@color/purple_500"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginfragmentEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:maxEms="1"
                    app:boxStrokeColor="@color/purple_500"
                    app:hintTextColor="@color/purple_500"
                    app:startIconTint="@color/purple_500"
                    app:passwordToggleEnabled="true"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginfragmentpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/loginfragmentbtn"
                    android:text="@string/sign_in"
                    android:background="@drawable/bg_splashde"
                    app:backgroundTint="@color/purple_500"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_account"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="50dp"
                        />
                    <TextView
                        android:id="@+id/ifyoudonthaveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/signup"
                        android:fontFamily="@font/archivo_black"
                        android:textColor="@color/purple_500"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <TextView
                    android:id="@+id/loginfragmentforgetpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redcolor"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@string/forget_password"
                    android:textSize="15sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>



</FrameLayout>