<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teacheruploadfragment"
    android:layout_height="match_parent"
    tools:context=".FragmentG">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/loginde"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_round_upload_file_24"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="130dp"
        android:textColor="@color/scolor"
        android:fontFamily="@font/archivo_black"
        android:layout_gravity="center_horizontal"
        android:text="@string/upload_your_exam" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_name"
        android:maxEms="1"
        app:boxStrokeColor="@color/purple_500"
        app:hintTextColor="@color/purple_500"
        app:startIconTint="@color/purple_500"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        android:layout_marginTop="250dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="5dp"
        android:layout_gravity="center_horizontal"
        app:startIconDrawable="@drawable/ic_baseline_drive_file_rename_outline_24">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterexamname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/createexambtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_splashde"
        android:text="@string/create"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_500"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="320dp"/>
    <Button
        android:id="@+id/uploadexambtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_splashde"
        android:text="@string/upload"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_500"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="380dp"/>

</FrameLayout>