<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/teacherfragmentsignup"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentB">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:maxEms="1"
                app:boxStrokeColor="@color/purple_500"
                app:hintTextColor="@color/purple_500"
                app:startIconTint="@color/purple_500"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_baseline_person_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teacherfragmentsignupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxEms="1"
                app:boxStrokeColor="@color/purple_500"
                app:hintTextColor="@color/purple_500"
                app:startIconTint="@color/purple_500"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teacherfragmentsignupEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:maxEms="1"
                app:boxStrokeColor="@color/purple_500"
                app:hintTextColor="@color/purple_500"
                app:startIconTint="@color/purple_500"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teacherfragmentsignupPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxEms="1"
                app:boxStrokeColor="@color/purple_500"
                app:hintTextColor="@color/purple_500"
                app:startIconTint="@color/purple_500"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teacherfragmentsignupPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:maxEms="1"
                app:boxStrokeColor="@color/purple_500"
                app:hintTextColor="@color/purple_500"
                app:startIconTint="@color/purple_500"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teacherfragmentsignupConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/teacherfragmentsignuppassdontidentecal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/redcolor"
                android:textSize="15sp"
                />


            <Button
                android:id="@+id/teacherfragmentsignupBtn"
                android:background="@drawable/bg_splashde"
                app:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signup"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_have_account"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="50dp"
                    />
                <TextView
                    android:id="@+id/teacheryouhaveacount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:fontFamily="@font/archivo_black"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</FrameLayout>